--- a/dev/web.html
+++ b/dev/web.html
@@ -286,7 +286,7 @@ body, html {
          <OL>
           <li>Remove the background of the original image online with <a href="https://webdevserv-portfolio-idoia-icodeidoia-portfolio-9kblei.streamlit.app/" target="_blank">my FREE background remover app</a>.
           <br/><img src="tutorial_img/500one1.jpg"></li>
-          <li>Import the image and create a new background you like using AI Stable Diffusion online. I used <a href="www.playground ai" target="_blank">www.plaground.ai.</a>
+          <li>Import the image and create a new background you like using AI Stable Diffusion online. I used <a href="www.playgroundai.com" target="_blank">www.plagroundai.com</a>
           <br/><img src="tutorial_img/500two2.jpg"></li>
           <li>Merge the two images with a graphic design application, I used GIMP.
           <br/><img src="tutorial_img/500three3.jpg"></li>
