--- a/dev/web.html
+++ b/dev/web.html
@@ -96,9 +96,9 @@ body, html {
             <img src="images/bat.png" style="width:100%;max-width:1000px" class="w3-margin-top">
             <p><strong>Location:</strong> Projects undertaken. Consult for availability.</p>
             <!--<p><strong>Web:</strong> learn more from my <a href="https://.github.io"></a>.</p>-->
-            <p><strong>Web apps:</strong><ul><li> Developed <a href="https://webdevserv-portfolio-idoia-icodeidoia-portfolio-9kblei.streamlit.app" target="_blank">web apps via Streamlit</a>.</li>
+            <p><strong>Web apps:</strong><ul><li>Developed <a href="https://webdevserv-portfolio-idoia-icodeidoia-portfolio-9kblei.streamlit.app" target="_blank">web apps via Streamlit</a>.</li>
               <li>Developed ML web app via Hugging Face: <a href="https://huggingface.co/spaces/AItool/is_virtualstaging" target="_blank">Is this virtual staging or is it real?</a></li>
-              <li><a href="https://discord.gg/jhrBtDDX" target="_blank">Developed discord channel</a> to showcase Stable Diffusion and AI image and video creations.</li>
+              <li><a href="https://discord.gg/jhrBtDDX" target="_blank">Discord channel</a> to showcase Stable Diffusion and AI image and video creations.</li>
               <li><a href="https://medium.com/@artGen101/ai-imagery-photo-editing-37cf3810b1b2" target="_blank">Medium write up on AI imagery restauration with GIMP.</a></li>
             </ul></p>
          </div>    
@@ -311,7 +311,7 @@ body, html {
   <div class="row">
     <div class="col-sm-5 copyright">
         <p>
-            Copyright &copy; <span id="current-year">2023</span> ILP
+            Copyright &copy; <span id="current-year">2024</span> ILP
         </p>
     </div>
     <div class="col-sm-2 top">
@@ -342,7 +342,6 @@ body, html {
         </ul>
     </div>-->
 </div>
-  <!--<p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">w3.css</a></p>-->
 </footer>
 
 <script>
