--- a/dev/web.html
+++ b/dev/web.html
@@ -111,15 +111,16 @@
                         <li>Developed ML web app via Hugging Face: <a href="https://huggingface.co/spaces/AItool/is_virtualstaging" target="_blank">Is this virtual staging or is it real?</a></li>
                         <li><a href="https://webdevserv.github.io/html_bites/dev/blog/classifier_portrait.html" target="_blank">Jupyter Notebook/Google colab</a> Image Classification web app, is it a portrait?</li>
                         <li>Kaggle notebook:
-                            <a href="https://www.kaggle.com/code/idoial/is-it-a-portrait-1st-model-from-my-data" target="_blank"></a>
+                            <a href="https://www.kaggle.com/code/idoial/is-it-a-portrait-1st-model-from-my-data" target="_blank">Image classification, is it a portrait?</a>
                         </li>
                         <li>Blog @ Medium:
                             <ul>
                                 <li><a href="https://medium.com/@artGen101/ai-imagery-photo-editing-37cf3810b1b2" target="_blank">Medium: AI imagery restauration with GIMP.</a></li>
                                 <li>
-                                    <a href="https://medium.com/@artGen101/easy-ai-classifier-is-it-a-portrait-or-a-street-photo-821f55d2c3af" target="_blank"></ul>
-                            </li>
-                            <li><a href="https://discord.gg/jhrBtDDX" target="_blank">Discord channel</a> to showcase Stable Diffusion and AI image and video creations.</li>
+                                    <a href="https://medium.com/@artGen101/easy-ai-classifier-is-it-a-portrait-or-a-street-photo-821f55d2c3af" target="_blank"></li>
+                            </ul>
+                        </li>
+                        <li><a href="https://discord.gg/jhrBtDDX" target="_blank">Discord channel</a> to showcase Stable Diffusion and AI image and video creations.</li>
                     </ul>
                 </p>
             </div>
